--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -56,7 +56,7 @@ body
         input#input__phone(type="text")
 
       .form-group.d-flex.justify-content-center.align-items-center
-        a.btn.btn--back(href="main.html").bg-secondary.d-flex.justify-content-center.align-items-center.text-light
+        a.btn.btn--back(href="index.html").bg-secondary.d-flex.justify-content-center.align-items-center.text-light
           span.mr-2
             i.fas.fa-angle-left
           span Quay lại 
@@ -126,7 +126,7 @@ body
       });
 
       $(".modal--back").click(() => {
-        location.replace("main.html");
+        location.replace("index.html");
       });
 
 
