--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -1,7 +1,7 @@
 
 doctype html
 head
-  title Danh sách học viên
+  title Danh sách hội viên
   
   link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous')
 
@@ -11,76 +11,121 @@ head
 
 body
 
-  .index-wrapper.flex-column.justify-content-center.align-items-center.mx-auto 
+  .loading-wrapper
+    .spinner-border.text-primary.loading
+    p.loading__text Vui lòng đợi trong giây lát
 
-    h1.text-center.mb-4 
-      a(href="index.html") Đăng nhập
+  .page-wrapper.container.flex-column.justify-content-center.align-items-center.mt-5.px-0 
+
+    nav.navbar 
+
+      button#check-btn(type="button") Check!
+      h1.text-center 
+        a(href="index.html") Danh sách hội viên
+      .account-info
+        span.account__name
+        span
+          i.fas.fa-caret-down
+
+    #index__modal.modal.fade
+      .modal-dialog
+        .modal-content
+
+          .modal-body
+            p.modal__text
+
+          .modal-footer.d-flex.justify-content-center
+            a.btn.btn-success.modal--success(data-dismiss='modal') Xác nhận
+            a.btn.btn-secondary.modal--cancel.ml-4(data-dismiss='modal') Hủy bỏ
+
+    #choose-page__modal.modal.fade
+      .modal-dialog.modal-dialog-centered.modal-sm
+        .modal-content
+
+          .modal-body
+            p.choose-page__text.text-center Nhập số trang
+            input.choose-page__input.d-block.mx-auto.mt-3(type="number")
+
+          .modal-footer.d-flex.justify-content-center
+            a.btn.btn-success.choose-page__confirm(data-dismiss='modal') Xác nhận
+            a.btn.btn-secondary.choose-page__cancel.ml-3(data-dismiss='modal') Hủy bỏ
+
+
+
+    form.search-area(action="")
+      input.form-control.search-input(type='text' placeholder='Tìm theo tên, năm sinh...')
+        
+      button.search-submit.btn.btn-outline-dark(type="button") 
+        i.fas.fa-search
+
+    p.search__result.text-center
     
-    form.login-form.d-flex.flex-column.align-items-center(action="")
-      .input-group
-        label(for="email-input") Email
-        input#email-input(type="text" placeholder="test")
-      .input-group
-        label(for="password-input") Mật khẩu
-        input#password-input(type="text" placeholder="123")
-      .input-group.d-flex.justify-content-center
-        a.btn.btn-success.login-confirm Xác nhận
-    
-  .login-modal 
-    .login-modal__body
-      .login-modal__text.mb-4 
-        .spinner-border
-      button.login-modal__cancel.btn.btn-success.login-confirm--fail(type="button") Xác nhận
+     
 
-  script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
+    .buttons-wrapper.d-flex.justify-content-center.w-100 
+      a.bg-danger.align-self-start.btn.btn--delete-selected.my-4.disabled(data-toggle="modal" data-target="#index__modal" data-backdrop="static" data-keyboard="false")
+        span.text-light
+          i.fas.fa-trash-alt.mr-2
+        span.text-light.ml-2 Xóa các mục được chọn
 
-  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
+      .custom-pagination.d-flex.justify-content-between.align-items-center.mx-auto 
+        button.custom-pagination__item.btn.first-page
+          i.fas.fa-angle-double-left
 
-  script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
+        button.custom-pagination__item.btn.prev-page
+          i.fas.fa-angle-left
+          
+        p.custom-pagination__display-text
 
-  script(src="script.js")
+        button.custom-pagination__item.btn.next-page
+          i.fas.fa-angle-right
 
-  script.
-    function hideModal() {
-      setTimeout(() => { 
-        $(".login-modal").removeClass("modal--active");
-        $(".login-modal__text").html('<div class="spinner-border"></div>')
-        }, 1500)
-    }
+        button.custom-pagination__item.btn.last-page
+          i.fas.fa-angle-double-right
 
-    function processToMain() {
-      setTimeout(() => { 
-        location.replace("main.html");
-        }, 1500)
-    }
+      a.bg-success.align-self-start.btn.btn--add.my-4(href="create.html")
+        span.text-light 
+          i.fas.fa-plus-circle
+        span.text-light.ml-2 Thêm hội viên
 
-    $(".login-confirm--fail").click(()=>{
-      $(".login-modal").removeClass("modal--active");
-    })
+    table.table.table-striped.mb-4
+      thead.thead-dark
+        tr.table-head
+          th 
+            input(type="checkbox")
+          th Họ tên
+          th Ngày sinh 
+          th Giới tính
+          th Email
+          th Số điện thoại
+          th Thao tác
+          
+      tbody
+  
+    .custom-pagination.d-flex.justify-content-between.align-items-center.mx-auto 
+      button.custom-pagination__item.btn.first-page
+        i.fas.fa-angle-double-left
 
-    $(".login-confirm").click(() => {
-      let emailInput = $("#email-input").val()
-      let passwordInput = $("#password-input").val()
-      $(".login-modal").addClass("modal--active");
+      button.custom-pagination__item.btn.prev-page
+        i.fas.fa-angle-left
+        
+      p.custom-pagination__display-text
 
-      $.ajax({
-        url: API_URL + "/login",
-        method: "POST",
-        data: {"email": emailInput, "password": passwordInput},
-        error: () => {
-          $(".login-modal__text").html("Tài khoản hoặc mật khẩu chưa đúng")
-          $(".login-modal__cancel").css("display", "block")
-          hideModal()
-        },
-        success: (response)=> {
-          $(".login-modal__cancel").css("display", "none")
-          $(".login-modal__text").html("Đăng nhập thành công")
-          localStorage.setItem("changeable-list-token", `${response.token}`)
-          console.log("Stored token: " + localStorage.getItem("changeable-list-token"))
-          console.log("Response token: " + response.token)
-        }
-      })
-    })
+      button.custom-pagination__item.btn.next-page
+        i.fas.fa-angle-right
+
+      button.custom-pagination__item.btn.last-page
+        i.fas.fa-angle-double-right
+
+    script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
+
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
+
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
+
+    script(src="script.js")
+
+    script(src="index.js")
 
       
 
