--- a/public/template/login.pug
+++ b/public/template/login.pug
@@ -28,7 +28,7 @@ body
     
   .login-modal 
     .login-modal__body
-      .login-modal__text.mb-4 
+      .login-modal__text.text-center 
         .spinner-border
       button.login-modal__cancel.btn.btn-success.login-confirm--fail(type="button") Xác nhận
 
@@ -41,6 +41,10 @@ body
   script(src="script.js")
 
   script.
+    console.log( "Active user: " + localStorage.getItem("active-user-name") )
+    console.log( "Active user ID: " + localStorage.getItem("active-user-id") )
+    console.log( "Active token: " + localStorage.getItem("changeable-list-token") )
+
     function hideModal() {
       setTimeout(() => { 
         $(".login-modal").removeClass("modal--active");
@@ -48,7 +52,7 @@ body
         }, 1500)
     }
 
-    function processToMain() {
+    function processToIndex() {
       setTimeout(() => { 
         location.replace("index.html");
         }, 1500)
@@ -73,11 +77,15 @@ body
           hideModal()
         },
         success: (response)=> {
+          localStorage.setItem("changeable-list-token", response.token)
+          localStorage.setItem("active-user-id", JSON.stringify(response.id))
+          localStorage.setItem("active-user-name", JSON.stringify(response.name))
+
           $(".login-modal__cancel").css("display", "none")
-          $(".login-modal__text").html("Đăng nhập thành công")
-          localStorage.setItem("changeable-list-token", `${response.token}`)
-          console.log("Stored token: " + localStorage.getItem("changeable-list-token"))
-          console.log("Response token: " + response.token)
+          $(".login-modal__text").html("Đăng nhập thành công <br> <span class='my-2 d-block'> Bạn sẽ được chuyển về trang chủ </span> <br> <span class='spinner-border'></span>")
+          console.log( "Response " + JSON.stringify(response.id) )
+          console.log("Token " + response.token)
+          processToIndex()
         }
       })
     })
