--- a/public/template/create.pug
+++ b/public/template/create.pug
@@ -79,6 +79,7 @@ body
     script(src="script.js")
     
     script.
+
       //Authentication
       $.ajax({
         url: usersURLMin,
@@ -107,13 +108,15 @@ body
       $("#save").click(() => {
         $.ajax({
           url: usersURL,
+          method: "POST",
           data: {
             "name": $("input")[0].value,
             "birthday": $("input")[1].value,
             "gender": gender,
             "email": $("input")[4].value,
             "phone": $("input")[5].value
-          }
+          },
+          headers: bearerToken
           //modal sau khi lưu: nhập tiếp hoặc về trang chủ
         }).done(function() {
             $(".modal-text").html(`
