--- a/public/template/login.pug
+++ b/public/template/login.pug
@@ -26,7 +26,8 @@ body
       .input-group.d-flex.justify-content-center
         a.btn.btn-success.login-confirm Xác nhận
     
-    a(href="https://journey-card-game.herokuapp.com/") News: Journey - the card game đã early access
+    a.d-block.mx-auto(href="https://journey-card-game.herokuapp.com/") News không liên quan: pet project Journey - the card game đã early access :)) 
+      span.text-primary Click!
 
   .login-modal 
     .login-modal__body
