--- a/public/template/login.pug
+++ b/public/template/login.pug
@@ -26,8 +26,16 @@ body
       .input-group.d-flex.justify-content-center
         a.btn.btn-success.login-confirm Xác nhận
     
-    a.d-block.mx-auto(href="https://journey-card-game.herokuapp.com/") News không liên quan: pet project Journey - the card game đã early access :)) 
-      span.text-primary Click!
+    .projects
+      p.mb-2 Các project khác của 
+        a.text-primary(href="https://github.com/ducnt444/") tôi:  
+
+      ul 
+        li.d-block.mx-auto 
+          a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, early access
+
+        li.d-block.mx-auto 
+          a.text-primary(href="https://ducnt444.github.io/halo/") - Halo: website tĩnh chủ đề bán máy ảnh
 
   .login-modal 
     .login-modal__body
