--- a/public/index.css
+++ b/public/index.css
@@ -111,6 +111,15 @@ input[type=checkbox] {
 
 /* --------------- kết thúc reset css --------------- */
 
+.projects {
+  border: 1px solid #000;
+  border-radius: 8px;
+  padding: 15px;
+  position: fixed;
+  top: 30px;
+  right: 50px;
+}
+
 .page-wrapper {
   display: none;
 }
