--- a/public/template/login.pug
+++ b/public/template/login.pug
@@ -27,14 +27,14 @@ body
         a.btn.btn-success.login-confirm Xác nhận
     
     .projects
-      p.mb-2 Các project khác của 
+      p.mb-3 Các project khác của 
         a.text-primary(href="https://github.com/ducnt444/") tôi:  
 
       ul 
-        li.d-block.mx-auto 
+        li.d-block.mx-auto.mt-1 
           a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, early access
 
-        li.d-block.mx-auto 
+        li.d-block.mx-auto.mt-1
           a.text-primary(href="https://ducnt444.github.io/halo/") - Halo: website tĩnh chủ đề bán máy ảnh
 
   .login-modal 
