--- a/public/template/login.pug
+++ b/public/template/login.pug
@@ -32,7 +32,7 @@ body
 
       ul 
         li.d-block.mx-auto.mt-1 
-          a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, early access
+          a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, alpha test
 
         li.d-block.mx-auto.mt-1
           a.text-primary(href="https://ducnt444.github.io/halo/") - Halo: website tĩnh chủ đề bán máy ảnh
