update PLANETARY link

--- a/public/template/login.pug
+++ b/public/template/login.pug
@@ -27,12 +27,11 @@ body
         a.btn.btn-success.login-confirm Xác nhận
     
     .projects
-      p.mb-3 Các project khác của 
-        a.text-primary(href="https://github.com/ducnt444/") tôi:  
+      p.mb-3 Các project khác của tôi:  
 
       ul 
         li.d-block.mx-auto.mt-1 
-          a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, alpha test
+          a.text-primary(href="https://ducnt444.github.io/planetary/") - PLANETARY: demo space travel (mobile), sử dụng Vue.JS
 
         li.d-block.mx-auto.mt-1
           a.text-primary(href="https://ducnt444.github.io/halo/") - Halo: website tĩnh chủ đề bán máy ảnh
